--- a/src/main/java/resources/templates/result.html
+++ b/src/main/java/resources/templates/result.html
@@ -11,12 +11,9 @@
 		</div>
 		<hr/>
 		<div id="dealResult" style="border:1px solid #000">
-			hello,world
-			sdf<br>
-			sdf<br>
-			sdf<br>
-			sdf<br>
-			sdf<br>
+			<p>message:</p>
+			<p th:text="'Hello, ' + ${message}">3333</p>
+			<br>
 		</div>
 	</div>
 </body>
